とりあえずPOSTまで

--- a/touringApp/templates/touringApp/getGIS.html
+++ b/touringApp/templates/touringApp/getGIS.html
@@ -15,6 +15,7 @@
     <div id="map"></div>
     <button id="reset">リセット</button>
     <button id="getLog">ルート+座標取得!</button>
+    <button id="sendLog">座標DBへ!</button>
     <br>
     <textarea id="log"></textarea>
   </body>
