--- a/touringApp/templates/touringApp/getGIS.html
+++ b/touringApp/templates/touringApp/getGIS.html
@@ -7,12 +7,14 @@
       html, body { height: 100%; margin: 0; padding: 0; }
       #map { height: 80%; }
     </style>
-    <!-- <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyD_5YpsXfgYtLv0LwBitX-U0flEOA3upSc"></script> -->
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyD_5YpsXfgYtLv0LwBitX-U0flEOA3upSc"></script>
     <script type="text/javascript" src="{% static 'jquery-3.1.1.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'getGISsub.js' %}" charset="utf-8"></script>
+    <script type="text/javascript" src="{% static 'getPos.js' %}" charset="utf-8"></script>
   </head>
   <body>
     <div id="map"></div>
+    ルート名：<input id="routeName" type="text" value=""></input>
+    時期：<input id="routeDate" type="date" value="2012-10-24"></input>
     <button id="reset">リセット</button>
     <button id="getLog">ルート+座標取得!</button>
     <button id="sendLog">座標DBへ!</button>
