--- a/touringApp/templates/touringApp/getGIS.html
+++ b/touringApp/templates/touringApp/getGIS.html
@@ -17,7 +17,7 @@
     時期：<input id="routeDate" type="date" value="2012-10-24"></input>
     <button id="reset">リセット</button>
     <button id="getLog">ルート+座標取得!</button>
-    <button id="sendLog">座標DBへ!</button>
+    <button id="sendLog" disabled>座標DBへ!</button>
     <br>
     <textarea id="log"></textarea>
   </body>
