--- a/touringApp/templates/touringApp/getGIS.html
+++ b/touringApp/templates/touringApp/getGIS.html
@@ -8,7 +8,7 @@
       #map { height: 80%; }
     </style>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyD_5YpsXfgYtLv0LwBitX-U0flEOA3upSc"></script>
-    <script type="text/javascript" src="{% static 'jquery-3.1.1.min.js' %}"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="{% static 'getPos.js' %}" charset="utf-8"></script>
   </head>
   <body>
