--- a/touringApp/templates/touringApp/index.html
+++ b/touringApp/templates/touringApp/index.html
@@ -8,11 +8,13 @@
     {% leaflet_js %}
     {% leaflet_css %}
 		<link rel="stylesheet" href="{% static 'sample.css' %}">
-    <script type="text/javascript" src="{% static 'getPos.js' %}" charset="utf-8"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
 	<body>
 		<div id="map"></div>
+		{% for pass in all %}
+			{{ pass.latitude }}
+		{% endfor %}
 		<script src="{% static 'route.js' %}"></script>
 	</body>
 </html>
