複数のルート対応。基本ルート機能はOK

--- a/touringApp/templates/touringApp/index.html
+++ b/touringApp/templates/touringApp/index.html
@@ -17,7 +17,7 @@
 		{% for allRoute in all %}
 			var positionSet = []
 			{% for pass in allRoute %}
-				var position = { "latitude": {{pass.latitude}}, "longitude": {{pass.longitude}} };
+				var position = { "id":{{pass.id}}, "latitude": {{pass.latitude}}, "longitude": {{pass.longitude}} };
 				positionSet.push(position);
 			{% endfor %}
 			allPass.push(positionSet);
