--- a/touringApp/templates/touringApp/index.html
+++ b/touringApp/templates/touringApp/index.html
@@ -16,12 +16,18 @@
       <canvas id="main" data-processing-sources="{% static 'indoor_fish.pde' %}"></canvas>
 		</div>
 		<div id="map"></div>
+		<button id="test">test</button>
 		<script>
     $(function () {
     	sizing();
     	$(window).resize(function() {
     		sizing();
     	});
+
+			$('#test').click(function(){
+				$('canvas').remove();
+				$('#wrapper').html("<img width='335' height='201' src={% static 'shadeFoxSample.png' %} >");
+			});
     });
 
     function sizing(){
