--- a/touringApp/static/sample.css
+++ b/touringApp/static/sample.css
@@ -10,14 +10,15 @@
 }
 body{
   background-color: black;
-	margin: 0px;
-	padding: 0px;
-	position: relative;
 }
 #wrapper{
 	width: 100%;
 	height: 100%;
-	position: fixed;
+}
+canvas {
+  position: relative;
+  top: 0;
+  left: 0;
 }
 *:focus{
   outline:none;
