--- a/touringApp/static/showRoute.css
+++ b/touringApp/static/showRoute.css
@@ -1,27 +1,14 @@
-
 .leaflet-container {
   cursor: default;
 }
 #map {
   width: 600px;
   height: 480px;
-  margin: 0px 0px 0px 40px;
+  margin: 40px auto;
   border: 1px solid #CECDD2;
 }
 body{
   background-color: black;
-}
-#wrapper{
-	width: 100%;
-	height: 100%;
-}
-canvas {
-  position: relative;
-  top: 0;
-  left: 0;
-}
-*:focus{
-  outline:none;
 }
 #fox {
   width: 335;
