右端にcolorBoxは寄せる

--- a/touringApp/templates/touringApp/index.html
+++ b/touringApp/templates/touringApp/index.html
@@ -25,7 +25,7 @@
     }
     // colorBox設定
     $(document).ready(function(){
-      $(".iframe").colorbox({iframe:true, width:"80%", height:"80%"});
+      $(".iframe").colorbox({iframe:true, width:"80%", height:"100%", fixed:true, right:0});
     });
 		</script>
 	</body>
