--- a/touringApp/templates/touringApp/index.html
+++ b/touringApp/templates/touringApp/index.html
@@ -11,22 +11,26 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.colorbox/1.6.4/jquery.colorbox-min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.colorbox/1.6.4/i18n/jquery.colorbox-ja.js"></script>
   </head>
+
 	<body>
+
     <div id="wrapper">
       <canvas id="main" data-processing-sources="{% static 'indoor_fish.pde' %}"></canvas>
 		</div>
-    <a class="iframe" href="http://127.0.0.1:8000/touringApp/showRoute/" title="showRoute">ここをclick</a>
-		<script>
 
-    // canvasサイズを画面に合わせる
-    function sizing(){
-    	$("#main").attr({height:$("#wrapper").height()});
-    	$("#main").attr({width:$("#wrapper").width()});
-    }
-    // colorBox設定
-    $(document).ready(function(){
-      $(".iframe").colorbox({iframe:true, width:"80%", height:"100%", fixed:true, right:0});
-    });
+    <a class="iframe" href="http://127.0.0.1:8000/touringApp/showRoute/" title="showRoute" hidden></a>
+    <a class="iframe" href="http://127.0.0.1:8000/admin/" title="admin" hidden></a>
+    <script>
+      // canvasサイズを画面に合わせる
+      function sizing(){
+      	$("#main").attr({height:$("#wrapper").height()});
+      	$("#main").attr({width:$("#wrapper").width()});
+      }
+
+      // colorBox設定
+      $(document).ready(function(){
+        $(".iframe").colorbox({iframe:true, width:"80%", height:"100%", fixed:true, right:0});
+      });
 		</script>
 	</body>
 </html>
