各menu画像対応

--- a/touringApp/static/index.css
+++ b/touringApp/static/index.css
@@ -2,10 +2,14 @@
 	width: 100%;
 	height: 100%;
 }
+canvas{
+	display: block;
+}
 *:focus{
   outline:none;
 }
 body{
   background-color: black;
   position: absolute;
+	margin: 0;
 }
