SAOフォント実装

--- a/touringApp/templates/touringApp/index.html
+++ b/touringApp/templates/touringApp/index.html
@@ -15,6 +15,7 @@
 			var menu1pass = "{% static 'images/menu1.png' %}";
 			var menu2pass = "{% static 'images/menu2.png' %}";
 			var menu3pass = "{% static 'images/menu3.png' %}";
+			var SAOfont = "{% static 'sword_art_online_font_by_darkblackswords-d5nssbp.otf' %}";
 		</script>
 	</head>
 
