デザインは一通り完成、jQueryで機能追加していく

--- a/touringApp/templates/touringApp/index.html
+++ b/touringApp/templates/touringApp/index.html
@@ -16,7 +16,19 @@
 			var menu2pass = "{% static 'images/menu2.png' %}";
 			var menu3pass = "{% static 'images/menu3.png' %}";
 			var userImagePass = "{% static 'images/user.png' %}";
+			var twitterPass = "{% static 'images/twitter.png' %}";
+			var facebookPass = "{% static 'images/facebook.png' %}";
+			var githubPass = "{% static 'images/github.png' %}";
+			var menu0_0Pass = "{% static 'images/menu0_0.png' %}";
+			var menu0_1Pass = "{% static 'images/menu0_1.png' %}";
+			var menu0_2Pass = "{% static 'images/menu0_2.png' %}";
+			var menu1_0Pass = "{% static 'images/menu1_0.png' %}";
+			var menu1_1Pass = "{% static 'images/menu1_1.png' %}";
+			var menu2_0Pass = "{% static 'images/menu2_0.png' %}";
+			var menu3_0Pass = "{% static 'images/menu3_0.png' %}";
+			var menu3_1Pass = "{% static 'images/menu3_1.png' %}";
 			var SAOfont = "{% static 'sword_art_online_font_by_darkblackswords-d5nssbp.otf' %}";
+			var arial = "{% static 'arial.ttf' %}";
 		</script>
 	</head>
 
