--- a/touringApp/templates/touringApp/index.html
+++ b/touringApp/templates/touringApp/index.html
@@ -37,10 +37,10 @@
     <div id="wrapper">
       <canvas id="main" data-processing-sources="{% static 'graphicSystem.pde' %}"></canvas>
 		</div>
-    <a id="showRoute" class="iframe" href="http://127.0.0.1:8000/touringApp/showRoute/" title="TouringLogApp" hidden></a>
-		<a id="getGIS" class="iframe" href="http://127.0.0.1:8000/touringApp/getGIS/" title="getGIS" hidden><a>
+    <a id="showRoute" class="iframe" href="{% url 'showRoute' %}" title="TouringLogApp" hidden></a>
+		<a id="getGIS" class="iframe" href="{% url 'getGIS' %}" title="getGIS" hidden><a>
 		<a id="admin" class="iframe" href="http://127.0.0.1:8000/admin/" title="admin" hidden></a>
-		<a id="logout" class="logout" href="http://127.0.0.1:8000/logout/" title="logout" hidden></a>
+		<a id="logout" class="logout" href="http://127.0.0.1:8000/admin/" title="logout" hidden></a>
 		<a id="myBike" class="modalImage" href="{% static 'images/mybike.jpg' %}" title="僕のSV400(にたまたま猫が乗ってた)">
     <script>
       // canvasサイズを画面に合わせる
@@ -51,7 +51,7 @@
 
       // colorBox設定
       $(document).ready(function(){
-        $(".iframe").colorbox({iframe:true, width:"80%", height:"100%", fixed:true, right:0});
+        $(".iframe").colorbox({iframe:true, width:"80%", height:"100%", fixed:true});
 				$(".modalImage").colorbox({width:"50%", height:"50%"});
 				$(".logout").colorbox({iframe:true, width:"70%", height:"70%", fixed:true});
       });
