--- a/touringApp/templates/touringApp/showRoute.html
+++ b/touringApp/templates/touringApp/showRoute.html
@@ -8,6 +8,8 @@
     {% leaflet_js %}
     {% leaflet_css %}
     <link rel="stylesheet" href="{% static 'showRoute.css' %}">
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+		<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
 	<body>
